This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.4 - not released yet
========================
+ MPCVideoDec: Add support for 4K for Intel HD Graphics 4000
+ AVI Splitter: Add a property page so that the support for non interleaved files
  can be turned on/off. Support for such files is now enabled by default.
  The old AVI Chunk Viewer dialog has been removed.
* Updated FFmpeg (git 6fa2532)
* Updated Little CMS to v2.4 rc2 (git 728139a)
* Updated SoundTouch to v1.7.0
* Updated MediaInfoLib to v0.7.60 r5048
* Updated ZenLib to v0.4.28 r403
* Remove .dat extention from the icon library and the formats
  (you can still associate it in the "Others" formats)
* Re-enable the embedded resources viewer in the properties dialog and improve
  its "open in brower" function (when double clicking on a resource)
* Store the path to MPC-HC's executable in HKEY_CURRENT_USER for external use.
  External applications that depend on that path should get it from there rather
  than HKEY_LOCAL_MACHINE. The old key in HKEY_LOCAL_MACHINE will be removed in
  the next version
! Web interface: Fix the "Deploy" feature
! Improve DVB subtitles handling: Fix missing subtitles.
! Ticket #102, Fix playback of VideoCD as disk
! Ticket #2540, Fix handling of big API messages
! Ticket #2547, The master window handle was erroneously reset
  when starting a file from the explorer.
! Ticket #2452, Fix color controls in certain situations